@startuml
'https://plantuml.com/class-diagram

abstract class AbstractHouse {
    buildBasic():void
    buildWalls():void
    roofed():void
    build():void
}

class CommonHouse
class HighBuilding

class Client

AbstractHouse ^-- CommonHouse
AbstractHouse ^-- HighBuilding

Client ..> CommonHouse
Client ..> HighBuilding

@enduml